--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.username=root
 spring.datasource.password=root
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+logging.level.org.springframework.web=TRACE
+logging.level.org.hibernate=ERROR
